--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             }, {
                 path: '/contact',
                 name: 'Contact'
-            }, ]);
+            }]);
             // console.log(myFirstRouter)
             var currentPath = window.location.pathname;
             if (currentPath === '/') {
@@ -70,6 +70,29 @@
                     view.innerHTML = '404!';
                 }
             }
+
+            //Fetch API
+            var btn = document.getElementById('country');
+            btn.addEventListener('click', function() {
+                var xhr = new XMLHttpRequest();
+                xhr.open('GET', 'http://localhost:3000/country', true);
+
+                xhr.onload = function() {
+                    var myData = JSON.parse(xhr.responseText);
+                    renderHTML(myData)
+                }
+                xhr.send();
+            })
+
+            function renderHTML(data) {
+                var htmlString = '';
+                for (i = 0; i < data.length; i++) {
+                    // htmlString += "<p>" + data[i].name + " is a " + data[i].species + "</p>"
+                    htmlString += "<p>" + "My Country Name is :" + "<b>" + data[i].name + "</b>" + "</p>"
+                }
+                para.insertAdjacentHTML('beforeend', htmlString)
+                para.innerHTML = htmlString
+            }
         }
     </script>
 </head>
@@ -82,8 +105,11 @@
     <button route="/about">About</button>
     <button route="/contact">Contact</button>
     <button route="/404">404</button>
+    <button id="country" route="/country">Country</button>
+    <p id="para"></p>
 
-    <script src="script.js"></script>
+
+    <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
