--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
     <script>
         window.onload = function() {
-            console.log('DOM Has Loaded')
+
+            //console.log('DOM Has Loaded')
+            var initialState = null;
+
+
+
 
             // Create Router Constructor
 
@@ -29,10 +34,12 @@
                     view.innerHTML = 'No route exists with this path'
                 } else {
                     window.history.pushState({}, '', routeInfo.path);
-                    console.log(window.history);
+                    //console.log(window.history);
+                    console.log(initialState);
                     view.innerHTML = 'You have clicked the ' + routeInfo.name + ' route'
                 }
             };
+
 
             // Add event listeners
             activeRoutes.forEach(function(route) {
@@ -55,11 +62,33 @@
             }, {
                 path: '/contact',
                 name: 'Contact'
+            }, {
+                path: '/country',
+                name: 'Country'
+            }, {
+                path: '/country/?code',
+                name: 'Country_code'
             }]);
             // console.log(myFirstRouter)
             var currentPath = window.location.pathname;
+            var param = window.location.search.slice(1);
+            //var paramOne = window.location.pathname.split("?")
+            console.log(param);
+            //console.log("paramOne", paramOne);
             if (currentPath === '/') {
+
                 view.innerHTML = 'You are on the root page';
+            } else if (param) {
+                var xhr = new XMLHttpRequest();
+                xhr.open('GET', 'http://localhost:3000/country', true);
+
+                xhr.onload = function() {
+                    var myData = JSON.parse(xhr.responseText);
+                    getDataByCode(myData, param)
+
+                }
+
+                xhr.send();
             } else {
                 var route = myFirstRouter.routes.filter(function(r) {
                     return r.path === currentPath
@@ -71,6 +100,19 @@
                 }
             }
 
+            function getDataByCode(data, param) {
+
+                var filterData = data.filter(item => {
+                    return item.code === param;
+                })
+                var data = filterData[0];
+                var htmlString = '';
+                htmlString += "<p>" + "My Country Name is :" + "<b>" + data.name + "</b>" + "</p>"
+
+                para.insertAdjacentHTML('beforeend', htmlString)
+                para.innerHTML = htmlString;
+            }
+
             //Fetch API
             var btn = document.getElementById('country');
             btn.addEventListener('click', function() {
@@ -80,18 +122,27 @@
                 xhr.onload = function() {
                     var myData = JSON.parse(xhr.responseText);
                     renderHTML(myData)
+
                 }
+
                 xhr.send();
+
+
+                //console.log(initialState)
             })
 
+
+
+
             function renderHTML(data) {
+
                 var htmlString = '';
                 for (i = 0; i < data.length; i++) {
                     // htmlString += "<p>" + data[i].name + " is a " + data[i].species + "</p>"
                     htmlString += "<p>" + "My Country Name is :" + "<b>" + data[i].name + "</b>" + "</p>"
                 }
                 para.insertAdjacentHTML('beforeend', htmlString)
-                para.innerHTML = htmlString
+                para.innerHTML = htmlString;
             }
         }
     </script>
@@ -105,11 +156,11 @@
     <button route="/about">About</button>
     <button route="/contact">Contact</button>
     <button route="/404">404</button>
-    <button id="country" route="/country">Country</button>
+    <button route="/country" id="country">Country</button>
     <p id="para"></p>
 
 
-    <!-- <script src="script.js"></script> -->
+    <!-- <script src="./data.js"></script> -->
 </body>
 
 </html>
